--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,3 @@
-.todo-list li.editing .edit {
-	display: block;
-}
-
-.todo-list li.editing .view {
-	display: none;
-}
-
-.todo-list li .edit {
-	display: none;
-}
-
-.newTodo   {
-    width: 60%;
+[v-cloak] {
+  display: none;
 }
